Checked in 10/02/2017 (UOB) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
@@ -3288,7 +3288,7 @@ left: -8px;
 
 .uobPersonaliseGraphSection .ui-tabs-panels {
     border-top: 0!important;
-    border: solid 3px #666666;
+   /* border: solid 3px #666666;*/
     height: 510px;
 }
 
