--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutHeader.xhtml
@@ -30,13 +30,13 @@
 
     </div>
 
-    <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/core-layout.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/custom.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/invessence-layout.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="invessence-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
 
 </ui:composition>
