--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -16,18 +16,18 @@
         </f:facet>
     </p:ajaxStatus>
 
-    <ui:include src="/template/common/spark/topbar.xhtml"/>
+    <ui:include src="/template/common/invessence/contactHeader.xhtml"/>
 
-    <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
-        <ui:include src="/template/common/spark/layoutmenu.xhtml"/>
-    </ui:fragment>
+     <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
+        <ui:include src="/template/common/invessence/layoutmenuHeader.xhtml"/>
+    </ui:fragment>  
 
     <div id="layout-portlets-cover">
         <ui:insert name="content">
             Template
         </ui:insert>
 
-        <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
+      <!--   <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
             <ui:fragment rendered="#{webutil.hasSSL}">
                 <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
                     <div class="ShowOnDesktopTablet">
@@ -39,16 +39,16 @@
             </ui:fragment>
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
             #{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
-        </div>
+        </div> -->
     </div>
 
-    <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/core-layout.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/custom.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/invessence-layout.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="invessence-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
 
 </ui:composition>
