Checked in uob files - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -6,7 +6,7 @@
         xmlns:p="http://primefaces.org/ui">
 
     <div id="menu-mask"></div>
-    <p:ajaxStatus styleClass="tcmLoaderBackground">
+    <p:ajaxStatus styleClass="invLoaderPanel">
         <f:facet name="start">
             <p:graphicImage name="demo/images/preloader.gif"/>
         </f:facet>
