--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
@@ -3532,3 +3532,23 @@ span > input {
 .ReturnValuePanel, .RiskValuePanel {
 	padding-left: 25px;
 }
+
+.invLoaderPanel {
+	pointer-events: none;
+	position: fixed;
+	background: none;
+	top: 0;
+	bottom: 0;
+	left: 150px;
+	text-align: center;
+	z-index: 9999999999999;
+	padding: 99px 0;
+}
+
+
+.invLoaderPanel img {
+	height: 30px;
+	width: 30px;
+	border-radius: 40px;
+	padding: 5px 5px;
+}
