--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -5,23 +5,38 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<div class="menuHeader">
-		<div class="Wid40 Fleft">
-			<a href="#{uiLayout.defaultHome}"> <h:graphicImage
-					name="#{uiLayout.logo}" library="invessence"
-					class="Fleft Sitelogo" />
-			</a>
-		</div>
+
 		<div class="Wid60 Fright menuButtons">
 		<ul>
-		<li><a href="/pages/consumer/uob/index.xhtml?app=N">Dashboard</a></li>
-		<li class="mbSelected"><a href="/pages/consumer/uob/cadd.xhtml?app=N">New Account</a></li>
-		<li>Setting</li>
-		<li>Logout</li>
+		<li>
+			<a href="#{uiLayout.defaultHome}">Dashboard</a>
+		</li>
+			<!--<a href="/pages/consumer/uob/index.xhtml?app=N">Dashboard</a>-->
+
+
+		<li class="mbSelected">
+			<p:commandLink rendered="#{webutil.hasAccess('USER')}"
+						   actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}">
+				<h:outputText value="New Account" />
+			</p:commandLink>
+
+			<!--<a href="/pages/consumer/uob/cadd.xhtml?app=N">New Account</a>--></li>
+
+			<li>
+				<ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
+				<a href="/pages/common/myprofile.xhtml">My Profile</a>
+			</ui:fragment>
+				<ui:fragment rendered="#{! webutil.hasAccess('ADVISOR')}">
+					<a href="/pages/common/myprofile.xhtml">My Profile</a>
+				</ui:fragment>
+			</li>
+
+		<li><p:commandLink action="#{sessionControl.logout}">
+			<h:outputText value="Logout" />
+		</p:commandLink></li>
 		</ul>
 		
 		</div>
-	</div>
 
 	
 
