--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
@@ -1691,7 +1691,7 @@ ui-message-fatal{color: #F55151 !important; background-color: #FBFCFD !important
 
 /*Style For UI CommandLink --------------------------------------------------------------------------------------*/
 
-.ui-commandlink{color: #27AAE1 !important; text-decoration: underline; margin-right: 5px;}
+/*.ui-commandlink{color: #27AAE1 !important; text-decoration: underline; margin-right: 5px;}*/
 
 /*Style For UI Link --------------------------------------------------------------------------------------*/
 
