--- a/Invessence/modules/web/src/main/webapp/template/common/uob/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/uob/layout.xhtml
@@ -42,13 +42,13 @@
         </div>
     </div>
 
-    <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/core-layout.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/custom.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/uob-layout.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="uob-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
 
 </ui:composition>
