--- a/Invessence/modules/web/src/main/webapp/template/common/uob/nolayout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/uob/nolayout.xhtml
@@ -19,12 +19,12 @@
         </f:facet>
     </p:ajaxStatus>
 
-    <h:outputStylesheet name="css/core-layout.css" library="invessence-layout"/>
-    <h:outputStylesheet name="css/font-awesome.css" library="invessence-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
-    <h:outputStylesheet name="css/invessence-layout.css" library="invessence-layout"/>
-    <h:outputStylesheet name="css/animate.css" library="invessence-layout"/>
-    <h:outputStylesheet name="css/modena-font.css" library="invessence-layout"/>
+    <h:outputStylesheet name="css/core-layout.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/uob-layout.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="uob-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="uob-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
 
 </ui:composition>
