--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/topbar.xhtml
@@ -3,7 +3,8 @@
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:f="http://java.sun.com/jsf/core"
         xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://java.sun.com/jsf/html">
+        xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:p="http://java.sun.com/jsf/html">
 
 
     <div id="" class="TopHeader">
