--- a/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -58,9 +58,11 @@
 
                     <li class="fa fa-ellipsis-v menu-separator" style="float:left!important;"></li>
                     <li>
-                        <h:commandLink action="#{sessionControl.logout}" styleClass="Animated05">
+                        <h:form styleClass="logoutBtnFrm">
+                        <h:commandLink action="#{sessionControl.logout}" style="" styleClass="Animated05">
                             <i class="fa fa-sign-out"></i> Logout
                         </h:commandLink>
+                        </h:form>
                     </li>
                     <!-- <li class="fa fa-ellipsis-v menu-separator"></li> -->
 
