Checked in uob files - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -33,8 +33,8 @@
             Template
         </ui:insert>
 
-      <!--   <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
-            <ui:fragment rendered="#{webutil.hasSSL}">
+      <!-- <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
+           <ui:fragment rendered="#{webutil.hasSSL}">
                 <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
                     <div class="ShowOnDesktopTablet">
                         <script type="text/javascript"
@@ -45,7 +45,24 @@
             </ui:fragment>
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
             #{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
-        </div> -->
+        </div>-->
+        <div class="layout-portlets-box">
+            <div class="Container100 Responsive100">
+                <div class="ContainerIndent"><div id="ceForm:j_idt277" class="ui-outputpanel ui-widget">
+                    <p style="font-style: italic; font-size: .8em;">
+                        This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
+                        (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
+                        It does not take in affect any tax withholdings or distributions.
+                        Past performance is no guarantee of future results. Any historical returns,
+                        expected returns, or probability projections may not reflect actual future
+                        performance. All securities involve risk and may result in loss. Not an offer,
+                        solicitation of an offer, or advice to buy or sell securities in jurisdictions
+                        where Invessence is not registered
+
+                    </p></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <h:outputStylesheet name="css/core-layout.css" library="invessence-layout"/>
