--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
@@ -3637,3 +3637,26 @@ span > input {
 .uobSliderLabel.lastLabel {
 	left: 5px;
 }
+
+.riskQ > tbody > tr > td:nth-child(1) {
+	vertical-align: initial!important;
+}
+
+.riskQ > tbody > tr > td:nth-child(1) > .ui-radiobutton  {
+	position: relative;
+	top: -2px;
+}
+
+.riskQ > tbody > tr > td:nth-child(2) > label {
+	line-height: 15px;
+}
+
+.riskQ > tbody > tr > td:nth-child(2) {
+	padding-bottom: 10px;
+}
+
+.ftBtnLabel {
+	font-size: 12px  ;
+	position: relative;
+	left: -23px;
+}
