--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
@@ -1385,7 +1385,7 @@ ui-message-fatal{color: #F55151 !important; background-color: #FBFCFD !important
 
 /*Style For UI Panel ------------------------------------------------------------------------------------- */
 
-.ui-panel{border: 1px solid #C6D6DF; padding:0px 0px !important; background-color:#FBFCFD; border-radius:3px;}
+.ui-panel{border: 1px solid #C6D6DF; padding:0px 0px !important; background-color:#transparent; border-radius:3px;}
     .ui-panel .ui-panel-titlebar{padding: 8px 10px 8px 10px !important; font-size:16px; color:#F1F6F9; z-index:100; font-family:'ralewaymedium';
                                     border-radius:2px !important; -webkit-border-radius:2px !important; -moz-border-radius:2px !important; background-color:#71CC8D;}
     .ui-datagrid .ui-panel .ui-panel-titlebar{padding: 6px 10px 6px 10px !important; font-size:15px; color:#F1F6F9; z-index:100; font-family:'ralewaymedium';
