--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -20,14 +20,14 @@
 .tcmLoaderBackground > div:nth-child(1) {
 	pointer-events: none;
 	position: fixed;
-	background: rgba(0, 0, 0, 0.63);
+	/*background: rgba(0, 0, 0, 0.63);*/
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	text-align: center;
 	z-index: 9999999999999;
-	padding: 260px 0;
+	padding: 1px 0;
 }
 
 .tcmLoaderBackground > div > img {
