--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
@@ -1522,19 +1522,19 @@ img.riskImage:hover {
 .tcmLoaderBackground > div:nth-child(1) {
     pointer-events: none;
     position: fixed;
-    background: rgba(0, 0, 0, 0.63);
+    /*background: rgba(0, 0, 0, 0.63);*/
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     text-align: center;
     z-index: 9999999999999;
-    padding: 260px 0;
+    padding: 7px 0;
 }
 
 .tcmLoaderBackground > div > img {
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
 }
 
 @media (max-width: 600px) {
